@@ -1428,10 +1428,12 @@ nco_is_spc_in_cf_att /* [fnc] Variable is listed in this CF attribute, thereby a
 	/* Yes, get attribute value(s) */
         rcd+=nco_inq_att(nc_id,var_id,att_nm,&att_typ,&att_sz);
 	if(att_typ == NC_STRING){
-	  if(FIRST_WARNING) (void)fprintf(stderr,"%s: WARNING %s reports \"%s\" attribute for variable %s is type %s, not %s. This violated the CF Conventions for allowed datatypes (http://cfconventions.org/cf-conventions/cf-conventions.html#_data_types) until about CF-1.8 released in 2019, when CF introduced support for attributes of (extended) type %s. NCO support for this feature is currently underway and is trackable at https://github.com/nco/nco/issues/274. Until this support is complete, NCO will skip this attribute. NB: To avoid excessive noise, NCO prints this WARNING at most once per dataset.\n",nco_prg_nm_get(),fnc_nm,att_nm,var_nm,nco_typ_sng(att_typ),nco_typ_sng(NC_CHAR),nco_typ_sng(NC_STRING));
-	  FIRST_WARNING=False;
+	  // 20230815 NC_STRING Support added, and WARNING deprecated
+	  ;
+	  // if(FIRST_WARNING) (void)fprintf(stderr,"%s: WARNING %s reports \"%s\" attribute for variable %s is type %s, not %s. This violated the CF Conventions for allowed datatypes (http://cfconventions.org/cf-conventions/cf-conventions.html#_data_types) until about CF-1.8 released in 2019, when CF introduced support for attributes of (extended) type %s. NCO support for this feature is currently underway and is trackable at https://github.com/nco/nco/issues/274. Until this support is complete, NCO will skip this attribute. NB: To avoid excessive noise, NCO prints this WARNING at most once per dataset.\n",nco_prg_nm_get(),fnc_nm,att_nm,var_nm,nco_typ_sng(att_typ),nco_typ_sng(NC_CHAR),nco_typ_sng(NC_STRING));
 	}else if(att_typ != NC_CHAR){
-	  (void)fprintf(stderr,"%s: WARNING %s reports \"%s\" attribute for variable %s is type %s. This violates the CF Conventions which allow only datatypes %s and %s for attribute %s. Will skip this attribute.\n",nco_prg_nm_get(),fnc_nm,att_nm,var_nm,nco_typ_sng(att_typ),nco_typ_sng(NC_CHAR),nco_typ_sng(NC_STRING),cf_nm);
+	  if(FIRST_WARNING) (void)fprintf(stderr,"%s: WARNING %s reports \"%s\" attribute for variable %s is type %s. This violates the CF Conventions which allow only datatypes %s and %s for attribute %s. Will skip this attribute. NB: To avoid excessive noise, NCO prints this WARNING at most once per dataset.\n",nco_prg_nm_get(),fnc_nm,att_nm,var_nm,nco_typ_sng(att_typ),nco_typ_sng(NC_CHAR),nco_typ_sng(NC_STRING),cf_nm);
+	  FIRST_WARNING=False;
 	  return IS_SPC_IN_CF_ATT;
 	} /* !att_typ */
 	if(att_typ == NC_CHAR){
@@ -1441,7 +1443,7 @@ nco_is_spc_in_cf_att /* [fnc] Variable is listed in this CF attribute, thereby a
 	  att_val[att_sz]='\0';
 	}else if(att_typ == NC_STRING){
 	  if(att_sz != 1L){
-	    (void)fprintf(stderr,"%s: WARNING %s reports \"%s\" attribute for variable %s is an %s array of size %ld. This violates the CF Conventions which requires a single string for this attribute. Will skip this attribute.\n",nco_prg_nm_get(),fnc_nm,att_nm,var_nm,nco_typ_sng(att_typ),att_sz);
+	    (void)fprintf(stderr,"%s: WARNING %s reports \"%s\" attribute for variable %s is an %s array of size %ld. This violates the CF Conventions which requires a single string for this attribute. NCO will skip this attribute.\n",nco_prg_nm_get(),fnc_nm,att_nm,var_nm,nco_typ_sng(att_typ),att_sz);
 	    return IS_SPC_IN_CF_ATT;
 	  } /* !att_sz */
 	  rcd+=nco_get_att(nc_id,var_id,att_nm,(void *)att_val_sngp,att_typ);
